not found page alignment has been corrected

--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,5 +1,5 @@
 .not-found {
 
-    height: 100vh;
+    height: 90vh;
     width: 100%;
 }
